--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
