refactor dockerCompose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ services:
       - "4000:27017"
 
   nodejs:
-    build:
-      context: ./backend
+    image: yashcse21/devops:backend
     container_name: nodejs
     environment:
       - DB=mongodb://mongodb:27017
@@ -22,15 +21,13 @@ services:
       - gen_ai
 
   knn:
-    build:
-      context: ./knn
+    image: yashcse21/devops:knn
     container_name: knn
     ports:
       - "3005:3000"
 
   gen_ai:
-    build:
-      context: ./genrative_ai
+    image: yashcse21/devops:gen_ai
     container_name: gen_ai
     ports:
       - "8005:8000"
